--- a/carrinho.html
+++ b/carrinho.html
@@ -15,7 +15,7 @@
 
     <div>
         <fieldset>
-            <produto>Ração Úmida - Pedigato</produto>
+            <produto class="texto">Ração Úmida <br>- Pedigato</produto>
         </fieldset>
     </div>
 
