--- a/pagina_inicial_logado.html
+++ b/pagina_inicial_logado.html
@@ -26,14 +26,14 @@
     <div>
         <pedido_acompanhamento>
         <pedido> Acompanhe seu pedido!</pedido>
-        <text>Digite o número do pedido:</text>
+        <text class="texto">Digite o número do pedido:</text>
         </pedido_acompanhamento>
     </div>
 
         <br><br>
     <div_cadastro>
         <cadastro1> Primeiro acesso?</cadastro1>
-        <text2>Clique aqui para se cadastrar!</text2>
+        <text2 class="texto">Clique aqui para se cadastrar!</text2>
     <div_cadastro>
 
 
