--- a/recuperacao_senha.html
+++ b/recuperacao_senha.html
@@ -14,10 +14,10 @@
     <form>
         <fieldset>
             <center>
-                Recupere a sua senha!
+               <label class="titulo_form"> Recupere a sua senha!</label>
             </center>
             <br><br>
-            <label>Digite seu email:</label>
+            <label class="texto">Digite seu email:</label>
             <input type="email" name="email" placeholder="Digite o seu e-mail" class="class_email" required>
             <br><br>
             <button>Avançar</button>
