--- a/agendamento.html
+++ b/agendamento.html
@@ -8,10 +8,19 @@
     <title>Agendamento</title>
 </head>
 <body>
-    <menu>
-        <a href="pagina_inicial.html"></a>
-    </menu>
-
+    <nav class="navbar navbar-light bg-light">
+        <a class="nav_voltar" href="home.html">
+            <img src="imagens/botao_voltar.svg" width="35" height="35" alt="voltar">
+          </a>
+          
+        <a class="nav_login" href="login.html">
+          <img src="imagens/login.svg" width="35" height="35" alt="login">
+        </a>
+      
+          <a class="nav_fechar" href="">
+              <img src="imagens/botao_fechar.svg" width="35" height="35" alt="fechar">
+            </a>
+    </nav>
     <br><br>
 <h1 class="agendamento"><img class="logo" src="imagens/logo.png"> Agendamento</h1>
 <br>
@@ -23,6 +32,8 @@
             <option value="Lily">Lily</option>
         </option>
         </select>
+        <br><br>
+        <a href="cadastro_pet.html">Cadastre outro pet aqui!</a>
     </div>
 
     <br><br>
