--- a/cadastro_pet.html
+++ b/cadastro_pet.html
@@ -7,11 +7,20 @@
     <title>Cadastre seu pet</title>
 </head>
 <body>
-    <menu>
-        <a href="perfil.html">Login</a>
-        <a href="pagina_inicial_logado.html"></a>
-        <a href="buscar.html">busca</a>
-    </menu>
+    <nav class="navbar navbar-light bg-light">
+        <a class="nav_voltar" href="home.html">
+            <img src="imagens/botao_voltar.svg" width="35" height="35" alt="voltar">
+          </a>
+          
+        <a class="nav_login" href="login.html">
+          <img src="imagens/login.svg" width="35" height="35" alt="login">
+        </a>
+      
+          <a class="nav_fechar" href="">
+              <img src="imagens/botao_fechar.svg" width="35" height="35" alt="fechar">
+            </a>
+    </nav>
+
     <form>
         <fieldset class="cadastro_pet">
             <div class="div_nome_pet">
