--- a/home.html
+++ b/home.html
@@ -1,21 +1,27 @@
 <html>
 <head>
     <link rel="stylesheet" href="home.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-
+    alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-
+    aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+    crossorigin="anonymous">
 
 <title>Página Inicial</title>
 </head>
 <body>
-    <div class="menu">
-     
-        <ul class="ul">
-            <li class="item"> <a class="item_login" href="login.html">
-                <img class="img_login" src="imagens/login.svg"  width="35px"> </a></li>
-            <li class="item" ><a class="item_carrinho" href="carrinho.html">
-                <img class="img_carrinho" src="imagens/carrinho.svg" width="25px"></a></li>
-        </ul>
 
-    </div>
+
+  <!-- Menu -->
+<nav class="navbar navbar-light bg-light">
+    <a class="nav_login" href="login.html">
+      <img src="imagens/login.svg" width="35" height="35" alt="login">
+    </a>
+
+    <a class="nav_carrinho" href="carrinho.html">
+        <img src="imagens/carrinho.svg" width="35" height="35" alt="carrinho">
+      </a>
+        
+  </nav>
 
 
     <br><br><br><br><br>
